--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,7 @@
       "@babel/env",
       "@babel/react"
     ],
-    "plugins": []
+    "plugins": [
+      ["@babel/plugin-proposal-class-properties", { "loose": true }]
+    ]
   }
